Fix main flexbox when overflow.

--- a/scss/lean.scss
+++ b/scss/lean.scss
@@ -40,14 +40,15 @@ $kbd-box-shadow: inset 0 -.15rem .2rem rgba(black, .50);
   display: flex;
   justify-content: space-between;
 
+  & > #navbar { order: 1; }
+  & > main { order: 2; }
+
   @include media-breakpoint-down(sm) {
     & > * { padding: 0 1rem; }
-    flex-direction: column-reverse;
+    flex-direction: column;
   }
 
   @include media-breakpoint-up(sm) {
-    flex-direction: row-reverse;
-
     & > #navbar {
       flex: 0 2 20em;
     }
@@ -60,6 +61,7 @@ $kbd-box-shadow: inset 0 -.15rem .2rem rgba(black, .50);
     & > * { padding: 0 1.5rem; }
 
     &::before {
+      order: 3;
       display: block;
       content: ' ';
       flex: 0 100 20em;
